fix css that bounced nav pills that wrapped when hovering

--- a/html/css/tk.css
+++ b/html/css/tk.css
@@ -5,3 +5,8 @@
 a, a:active, a:focus {
    outline: none;
 }
+
+.nav>li>a:focus, .nav>li>a:hover {
+    background-color: lightblue;
+	border-bottom:0;
+}
